[gd_scene format=3 uid="uid://cv8gsa8vpvj1a"]

[ext_resource type="Script" uid="uid://c8nt6oesxpsdc" path="res://bodies/guards/sentries/sentry.gd" id="1_bmsg8"]
[ext_resource type="Material" uid="uid://cyutonnakdbcg" path="res://bodies/player/res/lineboil.tres" id="1_e2b8b"]
[ext_resource type="Texture2D" uid="uid://chquvldyxdsn2" path="res://bodies/guards/sentries/res/sentry_lasse.png" id="2_e2b8b"]
[ext_resource type="Script" uid="uid://tn1u48npidyk" path="res://bodies/guards/vesnaManager.gd" id="3_eym0j"]
[ext_resource type="Script" uid="uid://d0fuh7h7140c6" path="res://bodies/guards/shared/state_machine.gd" id="5_76lny"]
[ext_resource type="Script" uid="uid://payan0hid8w2" path="res://bodies/guards/sentries/states/scan_state.gd" id="6_humcw"]
[ext_resource type="Script" uid="uid://c857wmo3vbq2t" path="res://bodies/guards/sentries/states/cooldown_state.gd.gd" id="7_5bve8"]
[ext_resource type="Script" uid="uid://c8fx5ethfpbhc" path="res://bodies/guards/sentries/states/alert_state.gd.gd" id="8_w5w8p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bmsg8"]
radius = 2000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_naond"]
radius = 233.71397

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dh5t"]
size = Vector2(293.3333, 486.6667)

[sub_resource type="AnimationRootNode" id="AnimationRootNode_7dh5t"]

[node name="sentry1" type="CharacterBody2D" unique_id=603938135 groups=["guards", "sentries"]]
scale = Vector2(0.15, 0.15)
collision_layer = 7
script = ExtResource("1_bmsg8")

[node name="AlertScanner" type="ShapeCast2D" parent="." unique_id=702588969]
modulate = Color(1, 1, 1, 0.24705882)
enabled = false
shape = SubResource("CircleShape2D_bmsg8")
target_position = Vector2(0, 0)
collision_mask = 7

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="." unique_id=211187770]
radius = 374.38

[node name="Hand" type="Area2D" parent="." unique_id=35048869]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand" unique_id=513507528]
shape = SubResource("CircleShape2D_naond")
debug_color = Color(0.7019608, 0, 0.3254902, 0.41960785)

[node name="Hitbox" type="CollisionShape2D" parent="." unique_id=509441090]
position = Vector2(-5.5631e-06, 10.000008)
shape = SubResource("RectangleShape2D_7dh5t")
debug_color = Color(0.7019608, 0.59607846, 0, 0.41960785)

[node name="VisionCone" type="Area2D" parent="." unique_id=1712278353]
collision_layer = 16
collision_mask = 4

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="VisionCone" unique_id=1239665097]
polygon = PackedVector2Array(1050, -650, 1050, 650, 153.333, 320, -150, 320, -320, 100, -320, -100, -150, -320, 160, -320)

[node name="Sprite" type="Sprite2D" parent="." unique_id=1460783650]
material = ExtResource("1_e2b8b")
texture = ExtResource("2_e2b8b")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=784210420]
tree_root = SubResource("AnimationRootNode_7dh5t")
anim_player = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationTree" unique_id=165476596]
root_node = NodePath("../..")

[node name="VesnaManager" type="Node2D" parent="." unique_id=897468463]
script = ExtResource("3_eym0j")
PORT = 9081

[node name="LineOfSight" type="RayCast2D" parent="." unique_id=762473499]
target_position = Vector2(0, 0)
collision_mask = 5

[node name="StateMachine" type="Node" parent="." unique_id=1934285666 node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_76lny")
initial_state = NodePath("Scan")

[node name="Scan" type="Node" parent="StateMachine" unique_id=748016823]
script = ExtResource("6_humcw")
switch_time = 5.0

[node name="Cooldown" type="Node" parent="StateMachine" unique_id=1329784497]
script = ExtResource("7_5bve8")

[node name="Alert" type="Node" parent="StateMachine" unique_id=1698343659]
script = ExtResource("8_w5w8p")

[connection signal="body_entered" from="VisionCone" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="VisionCone" to="." method="_on_vision_body_exited"]
[connection signal="command_received" from="VesnaManager" to="." method="_on_vesna_mind_command"]
